chrome/browser/speech/extension_api/tts_engine_extension_observer.h
@@ -15,11 +15,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 class Profile;
 
-namespace extensions {
-struct TtsVoice;
-struct TtsVoices;
-};  // namespace extensions
-
 // Profile-keyed class that observes the extension registry to determine load of
 // extension-based tts engines.
 class TtsEngineExtensionObserver
@@ -35,15 +30,6 @@ class TtsEngineExtensionObserver
 
   // Gets the currently loaded TTS extension ids.
   const std::set<std::string> GetTtsExtensions();
-
-  // Gets voices for |extension_id| updated through TtsEngine.updateVoices.
-  const std::vector<extensions::TtsVoice>* GetRuntimeVoices(
-      const std::string extension_id);
-
-  // Called to update the voices list for the given extension. This overrides
-  // voices declared in the extension manifest.
-  void SetRuntimeVoices(std::unique_ptr<extensions::TtsVoices> tts_voices,
-                        const std::string extension_id);
 
   // Implementation of KeyedService.
   void Shutdown() override;
@@ -69,9 +55,6 @@ class TtsEngineExtensionObserver
   Profile* profile_;
 
   std::set<std::string> engine_extension_ids_;
-
-  std::map<std::string, std::unique_ptr<extensions::TtsVoices>>
-      extension_id_to_runtime_voices_;
 
   friend class TtsEngineExtensionObserverFactory;
 
